fix firefox layout bugs in net-exchange-tool

--- a/layout/layout.css
+++ b/layout/layout.css
@@ -46,7 +46,6 @@ main {
 main {
     background: var(--primary-background);
     flex-grow: 1;
-    position: relative;
 }
 
 main>* {
